--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 
 h1 {
     color: rgb(190, 190, 190);
+    text-align: center;
 }
 
 a {
@@ -17,4 +18,8 @@ a {
     text-align: center;
     text-decoration: none;
     display: inline-block;
+}
+
+#maingrid {
+    text-align: center;
 }
