--- a/a1Style.css
+++ b/a1Style.css
@@ -17,7 +17,7 @@ h1 {
 
 a {
     font-size: 30px;
-    color: #2257c2;
+    color: #00a524;
     padding: 20px 20px;
     text-align: center;
     text-decoration: none;
