--- a/a1Style.css
+++ b/a1Style.css
@@ -15,7 +15,12 @@ h1 {
     text-align: center;
 }
 
-a {
+p {
+    color: white;
+    font-size: 20px;
+}
+
+#navItem {
     font-size: 30px;
     color: #00a524;
     padding: 20px 20px;
@@ -32,4 +37,23 @@ a:hover {
 #topbar {
     background-color: rgb(26, 26, 26);
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+#maingrid {
+    text-align: center;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    width: 1250px;
+}
+
+#link {
+    color:#00a524;
+    font-size: 25px;
 }
