--- a/a2Style.css
+++ b/a2Style.css
@@ -4,8 +4,7 @@ html {
 
 body {
     background-color: #2b2b2b;
-    background-image: url("a1/a1Background.jpg");
-    background-blend-mode: overlay;
+    background-image: url("a2/a2Background.jpg");
     padding: 0px;
     margin: 0px;
 }
@@ -53,7 +52,22 @@ a:hover {
     width: 1250px;
 }
 
-#link {
-    color:#00a524;
-    font-size: 25px;
+img {
+    height: 375px;
+    width: auto;
+}
+
+#arrow {
+    height: 100px;
+    width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#question {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
