--- a/a4Style.css
+++ b/a4Style.css
@@ -15,6 +15,11 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    color: rgb(190, 190, 190);
+    text-align: center;
+}
+
 p {
     color: white;
     font-size: 20px;
@@ -54,6 +59,6 @@ a:hover {
 }
 
 img {
-    height: 500px;
-    width: auto;
+    height: auto;
+    width: 650px;
 }
