--- a/a6Style.css
+++ b/a6Style.css
@@ -54,6 +54,26 @@ a:hover {
 }
 
 img {
-    height: 500px;
+    width: 450px;
+    height: auto;
+}
+
+#arrow {
+    height: 100px;
     width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#question {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#link {
+    color:#00a524;
+    font-size: 25px;
 }
