--- a/a7Style.css
+++ b/a7Style.css
@@ -15,6 +15,11 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    color: rgb(190, 190, 190);
+    text-align: center;
+}
+
 p {
     color: white;
     font-size: 20px;
@@ -53,7 +58,7 @@ a:hover {
     width: 1250px;
 }
 
-img {
-    height: 500px;
-    width: auto;
+#link {
+    color:#00a524;
+    font-size: 25px;
 }
