--- a/a8Style.css
+++ b/a8Style.css
@@ -6,6 +6,8 @@ body {
     background-color: #2b2b2b;
     background-image: url("a8/a8Background.jpg");
     background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 0px;
     margin: 0px;
 }
