--- a/a8Style.css
+++ b/a8Style.css
@@ -17,6 +17,11 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    color: rgb(190, 190, 190);
+    text-align: center;
+}
+
 p {
     color: white;
     font-size: 20px;
