--- a/projectStyle.css
+++ b/projectStyle.css
@@ -4,8 +4,8 @@ html {
 
 body {
     background-color: #2b2b2b;
-    background-image: url("a9/a9Background.jpg");
-    background-blend-mode: overlay;
+    background-image: url("project/projectBackground.jpg");
+    /* background-blend-mode: overlay; */
     padding: 0px;
     margin: 0px;
 }
@@ -50,7 +50,7 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
-    width: 1250px;
+    width: 1300px;
 }
 
 img {
